force-app/main/default/objects/Quote_Express__c/Quote_Express__c.object-meta.xml
<CustomObject>
    <label>Salesforce Quote Manager</label>
    <nameField>
        <label>SQM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Quote Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>