force-app/main/default/objects/Quote_Express__c/fields/Additional_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Sales Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Express</relationshipName>
    <type>Lookup</type>
</CustomField>