force-app/main/default/objects/Quote_Express__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <inlineHelpText>Applications are parts related to engine powered, land- based, non-railed vehicles for primary transportation purposes Eg. Engine, Exhaust</inlineHelpText>
    <label>Application</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pistons</fullName>
            </value>
            <value>
                <fullName>Engine blocks</fullName>
            </value>
            <value>
                <fullName>Cylinder heads</fullName>
            </value>
            <value>
                <fullName>Transmission control modules</fullName>
            </value>
            <value>
                <fullName>Clutches</fullName>
            </value>
            <value>
                <fullName>Transaxles</fullName>
            </value>
            <value>
                <fullName>Brake pads</fullName>
            </value>
            <value>
                <fullName>Brake rotors</fullName>
            </value>
            <value>
                <fullName>Brake calipers</fullName>
            </value>
            <value>
                <fullName>Brake master cylinders</fullName>
            </value>
            <value>
                <fullName>Catalytic converters</fullName>
            </value>
            <value>
                <fullName>Mufflers</fullName>
            </value>
            <value>
                <fullName>Exhaust pipes</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>BIW</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Body Frame Structure</fullName>
            </value>
            <value>
                <fullName>Braking</fullName>
            </value>
            <value>
                <fullName>Chassis</fullName>
            </value>
            <value>
                <fullName>Crash Management</fullName>
            </value>
            <value>
                <fullName>Drivetrain</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Exhaust</fullName>
            </value>
            <value>
                <fullName>Grounding</fullName>
            </value>
            <value>
                <fullName>Interiors</fullName>
            </value>
            <value>
                <fullName>Non-Automotive</fullName>
            </value>
            <value>
                <fullName>Seating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>