force-app/main/default/objects/Quote_Express__c/fields/Automotive_Programs__c.field-meta.xml
<CustomField>
    <fullName>Automotive_Programs__c</fullName>
    <inlineHelpText>Combination of Program Name, OEM &amp; Platform.</inlineHelpText>
    <label>Automotive Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program 1</fullName>
            </value>
            <value>
                <fullName>Program 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>