force-app/main/default/objects/Quote_Express__c/fields/Buyer_POC__c.field-meta.xml
<CustomField>
    <fullName>Buyer_POC__c</fullName>
    <formula>Contact__r.FirstName  +  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer (POC)</label>
    <type>Text</type>
</CustomField>