force-app/main/default/objects/Quote_Express__c/fields/EOP__c.field-meta.xml
<CustomField>
    <fullName>EOP__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>