force-app/main/default/objects/Quote_Express__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <inlineHelpText>A freight term identifies how transportation costs are calculated</inlineHelpText>
    <label>Freight Terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability and Insurance: Specifies who is responsible for any loss or damage to the goods during transit and whether insurance is provided.</fullName>
            </value>
            <value>
                <fullName>Delivery Times and Dates: Defines the agreed-upon schedule for the delivery of the goods, including any penalties for delays.</fullName>
            </value>
            <value>
                <fullName>Payment Terms: Outlines how and when the shipper is required to pay for the transportation services.</fullName>
            </value>
            <value>
                <fullName>Claims and Disputes: Describes the process for filing claims in case of damaged or lost goods and outlines the dispute resolution procedure.</fullName>
            </value>
            <value>
                <fullName>Packaging Requirements: Specifies how the goods should be packaged to ensure safe transport.</fullName>
            </value>
            <value>
                <fullName>Customs and Duties: Addresses responsibilities related to customs clearance and any applicable duties or taxes.</fullName>
            </value>
            <value>
                <fullName>3rd Party Billing</fullName>
            </value>
            <value>
                <fullName>CFR Cost and Freight</fullName>
            </value>
            <value>
                <fullName>CIP - Cost, Insurance and Freight</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and Insurance Paid to</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage Paid to Customer</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>DAF - Delivered at Frontier</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered at Place</fullName>
            </value>
            <value>
                <fullName>DDP Delivered Duty Paid</fullName>
            </value>
            <value>
                <fullName>DEQ - Delivered Ex Quay</fullName>
            </value>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FAS Free Along Ship</fullName>
            </value>
            <value>
                <fullName>FCA Free Carrier</fullName>
            </value>
            <value>
                <fullName>FOB - Free On Board</fullName>
            </value>
            <value>
                <fullName>PP&amp;A - Prepaid</fullName>
            </value>
            <value>
                <fullName>PrePaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>