force-app/main/default/objects/Quote_Express__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <label>Initiated By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>