force-app/main/default/objects/Quote_Express__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <inlineHelpText>Original Equipment Manufacturer</inlineHelpText>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bosch (Robert Bosch GmbH)</fullName>
            </value>
            <value>
                <fullName>Continental AG</fullName>
            </value>
            <value>
                <fullName>ZF Friedrichshafen AG</fullName>
            </value>
            <value>
                <fullName>Denso Corporation</fullName>
            </value>
            <value>
                <fullName>Magna International Inc</fullName>
            </value>
            <value>
                <fullName>Valeo</fullName>
            </value>
            <value>
                <fullName>Aisin Seiki Co., Ltd.</fullName>
            </value>
            <value>
                <fullName>Mahle GmbH</fullName>
            </value>
            <value>
                <fullName>Sumitomo Electric Industries, Ltd.</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Daimler</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Stellantis</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Renault-Nissan-Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Unison</fullName>
            </value>
            <value>
                <fullName>BelGee</fullName>
            </value>
            <value>
                <fullName>AllurGroup</fullName>
            </value>
            <value>
                <fullName>Asia Avto</fullName>
            </value>
            <value>
                <fullName>SemAZ</fullName>
            </value>
            <value>
                <fullName>Astana Motors</fullName>
            </value>
            <value>
                <fullName>AvtoVAZ</fullName>
            </value>
            <value>
                <fullName>GM-AvtoVAZ</fullName>
            </value>
            <value>
                <fullName>GUP Pissemasse</fullName>
            </value>
            <value>
                <fullName>Avtotor</fullName>
            </value>
            <value>
                <fullName>Derways</fullName>
            </value>
            <value>
                <fullName>Irito</fullName>
            </value>
            <value>
                <fullName>GAZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>