force-app/main/default/objects/Quote_Express__c/fields/PCS_yr__c.field-meta.xml
<CustomField>
    <fullName>PCS_yr__c</fullName>
    <label>PCS/yr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>