force-app/main/default/objects/Quote_Express__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>Platform is the sum of all common components, systems, and functions across different vehicle models.</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNC Machining</fullName>
            </value>
            <value>
                <fullName>Injection Molding</fullName>
            </value>
            <value>
                <fullName>Die Casting</fullName>
            </value>
            <value>
                <fullName>Stamping and Pressing</fullName>
            </value>
            <value>
                <fullName>3D Printing/Additive Manufacturing</fullName>
            </value>
            <value>
                <fullName>Forging</fullName>
            </value>
            <value>
                <fullName>Plastic Molding (Blow Molding, Thermoforming)</fullName>
            </value>
            <value>
                <fullName>Electroplating</fullName>
            </value>
            <value>
                <fullName>Assembly Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>