force-app/main/default/objects/Quote_Express__c/fields/Program_EOP__c.field-meta.xml
<CustomField>
    <fullName>Program_EOP__c</fullName>
    <inlineHelpText>End of Program Date</inlineHelpText>
    <label>Program EOP</label>
    <type>Date</type>
</CustomField>