force-app/main/default/objects/Quote_Express__c/fields/Program_SOP__c.field-meta.xml
<CustomField>
    <fullName>Program_SOP__c</fullName>
    <inlineHelpText>Start of Program Date</inlineHelpText>
    <label>Program SOP</label>
    <type>Date</type>
</CustomField>