force-app/main/default/objects/Quote_Express__c/fields/Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Currency__c</fullName>
    <label>Quote Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>