force-app/main/default/objects/Quote_Express__c/fields/Quote_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Due_Date__c</fullName>
    <label>Quote Due Date</label>
    <type>Date</type>
</CustomField>