force-app/main/default/objects/Quote_Express__c/fields/Quote_Terms__c.field-meta.xml
<CustomField>
    <fullName>Quote_Terms__c</fullName>
    <label>Quote Terms</label>
    <length>18</length>
    <type>Text</type>
</CustomField>