force-app/main/default/objects/Quote_Express__c/fields/RFQ_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Date__c</fullName>
    <inlineHelpText>Request for Quotation Date</inlineHelpText>
    <label>RFQ Date</label>
    <type>Date</type>
</CustomField>