force-app/main/default/objects/Quote_Express__c/fields/RFQ_No__c.field-meta.xml
<CustomField>
    <fullName>RFQ_No__c</fullName>
    <inlineHelpText>Request for Quotation Number</inlineHelpText>
    <label>RFQ No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>