force-app/main/default/objects/Quote_Express__c/fields/Shipping_Point__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Point__c</fullName>
    <label>Shipping Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>