force-app/main/default/objects/Quote_Express__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>