force-app/main/default/objects/Quote_Express__c/fields/Std_Pack_Quantity_Container__c.field-meta.xml
<CustomField>
    <fullName>Std_Pack_Quantity_Container__c</fullName>
    <label>Std Pack Quantity/Container</label>
    <length>18</length>
    <type>Text</type>
</CustomField>