force-app/main/default/objects/Quote_Express__c/listViews/Last_seven_days.listView-meta.xml
<ListView>
    <fullName>Last_seven_days</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Last seven days</label>
</ListView>